[tool.poetry]
name = "gisregularlysamplepoints"
version = "0.1.0"
description = ""
authors = ["asimjalwana <jalwanamohammad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^1.0.1"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
